--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ select#dipartment, select#doctor, select#custom, #dStart, #dEnd { background-col
 <div class="grid">
 
 <div class="card"><h2>Quick Links</h2>
-<a href="https://mail.google.com/mail/u/0/#inbox"> <img height="16" width="16" src='http://www.google.com/s2/favicons?domain=https://mail.google.com/mail/u/0/#inbox'/> Gmail</a>
+<a href="https://mail.google.com/mail/u/0/#inbox"> <img height="16" width="16" src='http://www.google.com/s2/favicons?domain=https://mail.google.com/mail/u/0/#inbox'/>  Gmail</a>
+<a href="https://www.blogger.com"> <img height="16" width="16" src='http://www.google.com/s2/favicons?domain=https://www.blogger.com'/>  Blogger</a>
+<a href="https://www.youtube.com"><img height="16" width="16" src='http://www.google.com/s2/favicons?domain=https://www.youtube.com'/>  Youtube</a>
 </div>
 
 </div>
