--- a/index.html
+++ b/index.html
@@ -36,9 +36,28 @@ select#dipartment, select#doctor, select#custom, #dStart, #dEnd { background-col
 </div>
 
 <div class="card"><h2>Social Network</h2>
-<a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a>
-<a href="https://www.blogger.com">Blogger</a>
-<a href="https://www.youtube.com">Youtube</a>
+<a href="https://facebook.com">Facebook</a>
+<a href="https://twitter.com">Twitter</a>
+<a href="https://www.instagram.com">Instagram</a>
+</div>
+
+<div class="card"><h2>Online Converter</h2>
+<a href="https://translate.google.com">Translate</a>
+<a href="converter.parbon.com">Bijoy Converter</a>
+<a href="https://www.minifier.org">JS Minifire</a>
+<a href="https://sites.google.com/site/gdocs2direct/">GDrive Link</a>
+<a href="https://online-converting.com/image/convert2ico/">ICO Converter</a>
+<a href="www.molbiotools.com/textextractor.html">Text Extractor</a>
+<a href="https://meyerweb.com/eric/tools/dencoder/">URL Encoder</a>
+</div>
+
+<div class="card"><h2>Cloud Storage</h2>
+<a href="https://drive.google.com">Drive</a>
+<a href="https://www.dropbox.com">Dropbox</a>
+</div>
+
+<div class="card"><h2>News</h2>
+<a href="https://roar.media/bangla">Roar</a>
 </div>
 
 </div>
@@ -46,7 +65,7 @@ select#dipartment, select#doctor, select#custom, #dStart, #dEnd { background-col
 <script>
 document.querySelectorAll('a').forEach( e => {
 var name = e.innerHTML;
-e.innerHTML = '<img height="16" width="16" src="http://www.google.com/s2/favicons?domain='+e.href+'"/> '+name;	});
+e.innerHTML = '<img height="20" width="20" src="http://www.google.com/s2/favicons?domain='+e.href+'"/> '+name;	});
 </script>
 
 </body>
