--- a/index.html
+++ b/index.html
@@ -44,11 +44,25 @@ select#dipartment, select#doctor, select#custom, #dStart, #dEnd { background-col
 <div class="card"><h2>Online Converter</h2>
 <a href="https://translate.google.com">Translate</a>
 <a href="converter.parbon.com">Bijoy Converter</a>
-<a href="https://www.minifier.org">JS Minifire</a>
+<a href="https://css-minifier.com/">CSS Minifier</a>
+<a href="https://www.minifier.org">JS Minifier</a>
 <a href="https://sites.google.com/site/gdocs2direct/">GDrive Link</a>
 <a href="https://online-converting.com/image/convert2ico/">ICO Converter</a>
 <a href="www.molbiotools.com/textextractor.html">Text Extractor</a>
 <a href="https://meyerweb.com/eric/tools/dencoder/">URL Encoder</a>
+</div>
+
+<div class="card"><h2>Webmaster</h2>
+<a href="https://regex101.com">RegEx</a>
+<a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_default">Tryit Editor</a>
+<a href="https://htmledit.squarefree.com">HTML Editor</a>
+<a href="https://instantdomainsearch.com">Domain Name Search</a>
+<a href="https://coolsymbol.com/">Text Symbols</a>
+<a href="https://www.nameql.com/?q=health">Domain Name Generator</a>
+<a href="https://www.namebounce.com/name-generator?first_word=health&extension=277&bs=0">Domain Generator</a>
+<a href="https://domainwheel.com/results/">Domain Generator</a>
+<a href="https://www.namecheckr.com/">Name Avibility Checker</a>
+
 </div>
 
 <div class="card"><h2>Cloud Storage</h2>
@@ -58,6 +72,12 @@ select#dipartment, select#doctor, select#custom, #dStart, #dEnd { background-col
 
 <div class="card"><h2>News</h2>
 <a href="https://roar.media/bangla">Roar</a>
+</div>
+
+<div class="card"><h2>Downloader</h2>
+<a href="https://zbigz.com/">Torrent</a>
+<a href="https://www.clipconverter.cc/">Youtube</a>
+<a href="http://iporntv.net/search/gemma+arterton">Gamma</a>
 </div>
 
 </div>
